--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,8 +1,8 @@
-<nav>
-  <ol>
-    <li><a href="#">Thriftshop</a></li>
+<nav class= "nav-header">
+  <div class="logo"><a href="#">Thriftshop</a></div>
+  <ul class="nav-links">
     <li><a href="#">Clothes</a></li>
     <li><a href="#">Sign up / Log in</a></li>
-  </ol>
-  <hr>
+  </ul>
 </nav>
+<hr>
