--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,28 @@
  *= require_tree .
  *= require_self
  */
+
+/*
+ font-family: 'Mulish', sans-serif;
+ font-family: 'Roboto Mono', monospace;
+*/
+
+body{font-family: 'Roboto Mono', monospace;
+}
+
+
+h1,h2,h3{font-family: 'Mulish', sans-serif;
+         text-align: center;
+}
+
+a{text-decoration: none;
+  color:#000;
+}
+
+footer{background-color: black;
+       font-size: 0.8em;
+       color: #fff;
+       a{color:#fff;}
+
+       padding:2em;
+}
