--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&family=Roboto+Mono&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <%= render partial: 'header' %>
 
     <%= yield %>
+
+    <%= render partial: 'footer' %>
   </body>
 </html>
