Feat homepage pics

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 .nav-header{
   display: flex;
   justify-content: space-between;
@@ -14,4 +15,13 @@
     li{display:inline-block;
       margin-left: 2em;
     }
+}
+
+.home_cards{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0 15em;
+
 }
