--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Buy beautiful and environmentally friendly clothes</h1> 
+<h1>Buy beautiful and environmentally friendly clothes</h1>
+
+<div class="home_cards">
+   <%= render partial: "item_card" %>
+</div>
