Init item controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Buy beautiful and environmentally friendly clothes</h1>
-
+<div class="main-title">
+  <h1>THRIFT</h1>
+  <em>Buy beautiful and environmentally friendly clothes</em>
+</div>
 <div class="home_cards">
    <%= render partial: "item_card" %>
 </div>
