--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,11 +17,13 @@
     }
 }
 
+.main-title{text-align: center;}
+
 .home_cards{
   display: flex;
   justify-content: center;
   align-items: center;
 
-  margin: 0 15em;
+  margin: 4em 15em;
 
 }
