--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -22,7 +22,7 @@
 .home_cards{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 
   margin: 4em 15em;
 
