--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -1,11 +1,18 @@
-.card{padding: 2em;}
+.card{padding: 2em;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
 
 
 .card img{
   max-width: 100%;
   max-height: 100%;
+
 }
 
-.card__title{margin: 1em 0;}
+.card__title{margin: 1em 0;
+}
 
-.card__desc{font-size: 0.9em;}
+.card__desc{font-size: 0.9em;
+}
