--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,11 @@
   <em>Buy beautiful and environmentally friendly clothes</em>
 </div>
 <div class="home_cards">
-   <%= render partial: "item_card" %>
+  <% @items.each do |item| %>
+    <%= render(partial: 'item_card',
+               locals: {card_title: item.title,
+                        description: item.description,
+                        photo_url: item.photo_url,
+                        item: item}) %>
+  <% end %>
 </div>
