--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -1,13 +1,18 @@
 .card{padding: 2em;
 display: flex;
+height: 18%;
+  width: 280px;
 flex-direction: column;
-justify-content: space-between;
 }
 
+.card__img{
+  height: 400px;
+
+}
 
 .card img{
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 
 }
 
