--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: 1em;
+  padding: 0.5em 1em;
 }
 
 .nav-links{
@@ -24,6 +24,6 @@
   justify-content: center;
   align-items: stretch;
 
-  margin: 4em 15em;
+  margin: 2em 4em 6em;
 
 }
