--- a/app/views/application/_item_card.html.erb
+++ b/app/views/application/_item_card.html.erb
@@ -1,5 +1,7 @@
 <div class="card">
-  <%= image_tag(photo_url) %>
+  <div class="card__img">
+    <%= image_tag(photo_url) %>
+  </div>
   <div class="card__intro">
     <h4 class="card__title"><%= card_title %></h4>
     <span class="card__desc"><%= description %></span>
