--- a/app/views/item/show.html.erb
+++ b/app/views/item/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Item#showindex</h1>
-<p>Find me in app/views/item/showindex.html.erb</p>
+<div>
+<%= render(partial: 'item_card',
+           locals: {card_title: @item.title,
+                    description: @item.description,
+                    photo_url: @item.photo_url,
+                    item: @item}) %>
+</div>
