--- a/app/assets/stylesheets/item.scss
+++ b/app/assets/stylesheets/item.scss
@@ -1,3 +1,47 @@
 // Place all the styles related to the item controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.item_show{
+  width: 50vw;
+  height: 60vh;
+
+  margin: 4em auto;
+
+  display: flex;
+}
+
+.item_show img{
+  width: 20vw;
+  height: 60vh;
+}
+.item_show__info{
+  background-color: #f9f9f9;
+  width: 22vw;
+  height: 60vh;
+
+  display:flex;
+  flex-flow: column wrap;
+}
+
+.item_show__title{
+  margin: 1em;
+}
+
+.item_show__footer{
+  flex-grow:1;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  margin: 2em;
+}
+
+.item_show__description{
+  font-size: 0.9em;
+  color: #202124;
+  text-align: center;
+}
+
+.item_show__add{
+  margin:0 auto;
+}
