--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,8 +1,10 @@
-<nav class= "nav-header">
-  <div class="logo"><%= link_to "Thriftshop", root_path%></div>
-  <ul class="nav-links">
-    <li><a href="#">Clothes</a></li>
-    <li><a href="#">Sign up / Log in</a></li>
-  </ul>
-</nav>
-<hr>
+<header>
+  <nav class= "nav-header">
+    <div class="logo"><%= link_to "Thriftshop", root_path%></div>
+    <ul class="nav-links">
+      <li><a href="#">Clothes</a></li>
+      <li><a href="#">Sign up / Log in</a></li>
+    </ul>
+  </nav>
+  <hr>
+</header>
