--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-title">
-  <h1>THRIFT</h1>
-  <em>Buy beautiful and environmentally friendly clothes</em>
+  <h2>THRIFT</h2>
+  <em class="main-title__desc">Buy beautiful and environmentally friendly clothes</em>
 </div>
 <div class="home_cards">
   <% @items.each do |item| %>
