--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -1,18 +1,15 @@
-.card{padding: 2em;
-display: flex;
-height: 18%;
-  width: 280px;
-flex-direction: column;
-}
+.card{
+  display: flex;
+  flex-direction: column;
 
-.card__img{
-  height: 400px;
+  max-height: 100%;
 
+  padding: 0 1.5em;
 }
 
 .card img{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 
 }
 
