--- a/app/assets/stylesheets/item.scss
+++ b/app/assets/stylesheets/item.scss
@@ -3,22 +3,24 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .item_show{
-  width: 50vw;
-  height: 60vh;
-
-  margin: 4em auto;
-
   display: flex;
+
+  height: 90%;
+  width: 50%;
+
+  margin: 2.5% 25% 2.5%;;
 }
 
 .item_show img{
-  width: 20vw;
-  height: 60vh;
+  max-width: 100%;
+  max-height: 100%;
 }
+
+
 .item_show__info{
+  flex-grow: 1;
+
   background-color: #f9f9f9;
-  width: 22vw;
-  height: 60vh;
 
   display:flex;
   flex-flow: column wrap;
