--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
 
   <body>
     <%= render partial: 'header' %>
-
-    <%= yield %>
+    <div id="main">
+      <%= yield %>
+    </div>
 
     <%= render partial: 'footer' %>
   </body>
