--- a/app/views/application/_item_card.html.erb
+++ b/app/views/application/_item_card.html.erb
@@ -1,4 +1,4 @@
-<%= link_to(item_path(item.id)) do %>
+<%= link_to(item_path(item)) do %>
   <div class="card">
 
       <%= image_tag(photo_url) %>
