Init index and new

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class= "nav-header">
     <div class="logo"><%= link_to "Thriftshop", root_path%></div>
     <ul class="nav-links">
-      <li><a href="#">Clothes</a></li>
+      <li><%= link_to "Clothes", items_path%></li>
       <li><a href="#">Sign up / Log in</a></li>
     </ul>
   </nav>
