--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,6 +1,12 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.all-items{display:flex;
+  flex-wrap:wrap;
+}
+
+.all-items img{height:150px;}
+
 .item_show{
   display: flex;
 
