--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,9 @@
-<div>The items index
+<div class="all-items">The items index
+
+  <% @items.each do |item|%>
+    <li>
+      <%= render(partial: 'item_card',
+                 locals: {card_title: item.title, photo_url: item.photo_url, item: item})%>
+    </li>
+  <% end %>
 </div>
