--- a/app/views/application/_item_photo.html.erb
+++ b/app/views/application/_item_photo.html.erb
@@ -1,6 +1,5 @@
 <% if(photo_url.nil? || photo_url.empty?) %>
-  <img src='https://i.ytimg.com/vi/-rWT6JbRiAo/maxresdefault.jpg'
-       alt='Northern lights over mountain covered in snow'>
+  <%= image_tag('unavailable.jpg', alt: "Unavailable picture") %>
 <% else %>
   <%= image_tag(photo_url) %>
 <% end %>
