--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -1,15 +1,36 @@
 .card{
+  height: 100%;
+  width: 20%;
+
+  padding: 0 0.2em;
+
+  @media screen and (min-width: 1500px) {
+    width: 15%;
+    padding: 0 1.5em;
+  }
+}
+
+.card a{
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
 
-  max-height: 100%;
-
-  padding: 0 1.5em;
 }
 
 .card img{
   max-width: 100%;
   max-height: 100%;
+  @media screen and (min-width: 600px) {
+    width: 220px;
+    height: 330px;
+  }
+  @media screen and (min-width: 1500px) {
+    width: 250px;
+    height: 375px;
+  }
 
 }
 
