--- a/app/views/application/_item_card.html.erb
+++ b/app/views/application/_item_card.html.erb
@@ -3,7 +3,7 @@
     <%= render(partial: 'item_photo',
                locals: {photo_url: photo_url}) %>
     <div class="card__intro">
-      <h4 class="card__title"><%= card_title %></h4>
+      <h4 class="card__title"><%= card_title %> // <span class="card__price"><%= price %> CHF</span></h4>
     </div>
     <% end %>
 </div>
