--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -9,6 +9,10 @@
     <%= form.text_field(:title, class: 'input__text') %>
   </div>
   <div class="input">
+    <%= form.label(:price, class: 'input__label') %>
+    <%= form.text_field(:price, class: 'input__text') %>
+  </div>
+  <div class="input">
     <%= form.label(:photo_url, class: 'input__label') %>
     <%= form.text_field(:photo_url, class: 'input__text') %>
   </div>
