--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,6 +6,9 @@
       <h3>
         <%= @item.title %>
       </h3>
+      <div class="item_show__price">
+        <%= @item.price %> CHF
+      </div>
     </div>
     <div class="item_show__footer">
       <div class="item_show__description">
