--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
   <% @items.each do |item| %>
     <%= render(partial: 'item_card',
                locals: {card_title: item.title,
+                        price: item.price,
                         description: item.description,
                         photo_url: item.photo_url,
                         item: item}) %>
