--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,16 @@
-<div class="main-title">
-  <h2>THRIFT</h2>
-  <em class="main-title__desc">Buy beautiful and environmentally friendly clothes</em>
-</div>
-<div class="home_cards">
-  <% @items.each do |item| %>
-    <%= render(partial: 'item_card',
-               locals: {card_title: item.title,
-                        price: item.price,
-                        description: item.description,
-                        photo_url: item.photo_url,
-                        item: item}) %>
-  <% end %>
+<div id="main">
+  <div class="main-title">
+    <h2>THRIFT</h2>
+    <em class="main-title__desc">Buy beautiful and environmentally friendly clothes</em>
+  </div>
+  <div class="home_cards">
+    <% @items.each do |item| %>
+      <%= render(partial: 'item_card',
+                 locals: {card_title: item.title,
+                          price: item.price,
+                          description: item.description,
+                          photo_url: item.photo_url,
+                          item: item}) %>
+    <% end %>
+  </div>
 </div>
