--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,8 @@
-<div class="all-items">The items index
-
-  <% @items.each do |item|%>
-    <li>
-      <%= render(partial: 'item_card',
-                 locals: {card_title: item.title, price: item.price, photo_url: item.photo_url, item: item})%>
-    </li>
-  <% end %>
+<div id="main--content">
+  <div class="items--index">
+    <% @items.each do |item|%>
+        <%= render(partial: 'item_card--index',
+                   locals: {card_title: item.title, price: item.price, photo_url: item.photo_url, item: item})%>
+    <% end %>
+  </div>
 </div>
