Refactor card with button

--- a/app/views/application/_item_card.html.erb
+++ b/app/views/application/_item_card.html.erb
@@ -4,6 +4,13 @@
                locals: {photo_url: photo_url}) %>
     <div class="card__intro">
       <h4 class="card__title"><%= card_title %> // <span class="card__price"><%= price %> CHF</span></h4>
+      <div class="card__add">
+        <div>ADD TO CART</div>
+        <svg>
+          <use href="#pluss"></use>
+        </svg>
+      </div>
+
     </div>
     <% end %>
 </div>
