--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,15 @@
   </head>
 
   <body>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <symbol id="pluss" viewBox="0 0 24 24" aria-labeledby="title">
+        <title>Add</title>
+        <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+      </symbol>
+    </svg
     <%= render partial: 'header' %>
 
       <%= yield %>
-    </div>
 
     <%= render partial: 'footer' %>
   </body>
