--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -20,9 +20,10 @@
 
 }
 
-.card img{
+.card__img{
   max-width: 100%;
   max-height: 100%;
+  
   @media screen and (min-width: 600px) {
     width: 220px;
     height: 330px;
@@ -34,13 +35,55 @@
 
 }
 
-.card__title{margin: 1em 0;
-}
-
 .card__desc{font-size: 0.9em;
 }
+
+.card__title{
+  margin: 1em 0;
+  padding-left: 1em;
+}
+
+.card__intro{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 100px;
+
+
+  h4{
+    margin: 0.8em 0;
+  }
+
+  @media screen and (min-width: 600px) {
+    max-width: 220px;
+  }
+
+  @media screen and (min-width: 1500px) {
+    max-width: 250px;
+  }
+}
+
 
 .card__price{
   font-weight: 100;
   font-size: 0.9em;
+}
+
+.card__add{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #d8e3df;
+  width: 100%;
+  height: 40%;
+
+  div{
+    margin-left: 1em;
+  }
+
+  svg{
+    width: 20%;
+    height: 45%;
+  }
 }
