--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,17 @@
   </head>
 
   <body>
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg class="hidden" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <symbol id="pluss" viewBox="0 0 24 24" aria-labeledby="title">
         <title>Add</title>
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
       </symbol>
-    </svg
+      <symbol id="done" viewBox="0 0 24 24" aria-labeledby="title">
+        <title>Done</title>
+        <path d="M0 0h24v24H0z" fill="none"/>
+        <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
+      </symbol>
+    </svg>
     <%= render partial: 'header' %>
 
       <%= yield %>
