Feat ajax add to cart

--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -75,14 +75,16 @@
 
   div{
     margin-left: 1em;
+    height:20px;
   }
 
   svg{
     width: 20%;
-    height: 45%;
+    height: 20px;
   }
 }
 
 card__add--added{
+  width: 100%;
   padding: 1em;
 }
