--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="logo"><%= link_to "Thriftshop", root_path%></div>
     <ul class="nav-links">
       <li><%= link_to "Clothes", items_path%></li>
-      <li><a href="#">Sign up / Log in</a></li>
+      <li><a href="#">My cart</a></li>
     </ul>
   </nav>
   <hr>
