--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -70,6 +70,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #d8e3df;
+  max-width: 220px;
   width: 100%;
   height: 40%;
 
@@ -85,6 +86,7 @@
 }
 
 card__add--added{
+  max-width: 220px;
   width: 100%;
   padding: 1em;
 }
