--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -15,8 +15,9 @@
 
 .cart_hr{
   height: 1px;
-  background-color: #ddd;
+  background-color: #aaa;
   border: none;
+
 
   width: 95%;
   margin:auto;
