--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -36,6 +36,8 @@
       added.className="card__add--added"
 
       buttons[i].appendChild(added);
+
+      buttons[i].className = "card__add reverse";
       cart.push(item);
     }
   }
