Init address view

--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -10,15 +10,38 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: 1em;
+  padding: 1em 25%;
 }
 
 .cart_hr{
   height: 1px;
-  background-color: #aaa;
+  background-color: #ddd;
   border: none;
+  opacity: 0.5;
 
 
-  width: 95%;
+  width: 50%;
   margin:auto;
+}
+
+#no-item{
+  padding:1em;
+  margin: 0 0 auto;
+}
+
+.cart_nextBtn{
+  font-size: 1.1em;
+  padding: 0.5em;
+  background-color: #eee;
+  border: 2px solid #aaa;
+}
+
+.cart_nextBtn--address{
+  margin: 0 0 2em;
+}
+
+.cart_nextBtnRow{
+  padding:2em 0;
+  display:flex;
+  justify-content: center;
 }
