--- a/app/views/application/_add.html.erb
+++ b/app/views/application/_add.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(add_path, class: 'wide', method: :get, remote: true) do %>
+<%= form_tag(add_path, class: 'wide--center', method: :get, remote: true) do %>
 
   <%= hidden_field_tag('item', item.id)%>
   <%= button_tag('ADD TO CART', class:  'card__add') do %>
