--- a/app/views/application/_item_photo.html.erb
+++ b/app/views/application/_item_photo.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="card__img--center">
   <% if(photo_url.nil? || photo_url.empty?) %>
     <%= image_tag('unavailable.jpg', alt: "Unavailable picture", class:"card__img") %>
   <% else %>
