--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -1,6 +1,6 @@
 .card{
   height: 100%;
-  width: 20%;
+  width: 25%;
 
   display: flex;
   flex-direction: column;
@@ -20,12 +20,17 @@
   max-height: 100%;
 
   @media screen and (min-width: 600px) {
-    width: 220px;
-    height: 330px;
-  }
-  @media screen and (min-width: 1500px) {
     width: 250px;
     height: 375px;
+
+    &.img--home{
+      width: 230px;
+      height: 360px;
+    }
+  }
+  @media screen and (min-width: 1500px) {
+    width: 280px;
+    height: 420px;
   }
 
 }
@@ -41,7 +46,7 @@
 .card__intro{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   max-height: 100px;
 
@@ -50,13 +55,6 @@
     margin: 0.8em 0;
   }
 
-  @media screen and (min-width: 600px) {
-    max-width: 220px;
-  }
-
-  @media screen and (min-width: 1500px) {
-    max-width: 250px;
-  }
 }
 
 
@@ -85,8 +83,9 @@
   }
 }
 
-card__add--added{
-  max-width: 220px;
-  width: 100%;
-  padding: 1em;
+
+.card__img--center{
+  display:flex;
+
+  justify-content: center;
 }
