--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ body{
 }
 
 
-h1,h2,h3{font-family: 'Mulish', sans-serif;
+h1,h2,h3{font-family: 'Roboto Mono', monospace;
          text-align: center;
 }
 
@@ -80,6 +80,12 @@ header hr{
 
 .wide{
   width:100%;
+}
+
+.wide--center{
+  width:100%;
+  display: flex;
+  justify-content: center;
 }
 
 .reverse{
