--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,6 +1,6 @@
 .form_new_model{
   width: 40%;
-  margin:auto;
+  margin: 4em auto 0;
 }
 
 
@@ -18,4 +18,23 @@
 .input__text_area{
   width: 50%;
   height: 100px;
+}
+
+.input-group__label{
+  width: 20%;
+}
+
+.form--title{
+  margin: 2em 0 0 0;
+}
+
+.input__submit{
+  display: flex;
+  justify-content: center;
+
+  margin: 2em 0;
+}
+
+.input__submit.input__submit--nomargin{
+  margin: 0;
 }
