--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 <script type="text/javascript">
   cart=[];
-  if(localStorage.getItem('cart') != null){
+  if(localStorage.getItem('cart').length > 0){
     cart = localStorage.getItem('cart');
     cart=JSON.parse(cart);
   }
