--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
 
 <script type="text/javascript">
   cart=[];
-  if(localStorage.getItem('cart') != null){
+  if(localStorage.getItem('cart').length > 0){
     cart = localStorage.getItem('cart');
     cart=JSON.parse(cart);
   }
