--- a/app/views/cart/address.html.erb
+++ b/app/views/cart/address.html.erb
@@ -1,5 +1,5 @@
 <div id="main">
-  <h2 class="form--title">Delivery address</h2>
+  <h2 id="address_title" class="form--title">Delivery address</h2>
 
   <%= form_tag(addressPOST_path, class: 'form_new_model') do %>
 
