--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -3,56 +3,30 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 /* ITEMS SHOW */
-
-.item_show{
+.show{
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  height: 90%;
-  width: 50%;
-
-  margin: 2.5% 25% 2.5%;;
+  height: 100%;
 }
 
-.item_show img{
-  max-width: 100%;
-  max-height: 100%;
+.card--show{
+  display: flex;
+  justify-content: space-around;
+
+  width: 100%;
+  margin:auto;
 }
 
-
-.item_show__info{
-
-  background-color: #f9f9f9;
+.card--show__desc{
+  width: 600px;
+  line-height: 50px;
 
   display:flex;
-  flex-flow: column wrap;
-}
+  flex-direction: column;
+  justify-content: center;
 
-.item_show__title{
-  margin: 1em;
-}
-
-.item_show__price{
-  text-align:center;
-  font-size: 0.9em;
-  font-style: italic;
-}
-
-.item_show__footer{
-  flex-grow:1;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
-  margin: 2em;
-}
-
-.item_show__description{
-  font-size: 0.9em;
-  color: #202124;
-  text-align: center;
-}
-
-.item_show__add{
-  margin:0 auto;
+  padding: 2em 0 4em;
 }
 
 /* INDEX ITEMS */
