--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,24 +1,42 @@
 <div id="main">
-  <div class="item_show">
-    <%= render(partial: 'item_photo',
-              locals:{photo_url: @item.photo_url})%>
-    <div class="item_show__info">
-      <div class="item_show__title">
-        <h3>
-          <%= @item.title %>
-        </h3>
-        <div class="item_show__price">
-          <%= @item.price %> CHF
-        </div>
-      </div>
-      <div class="item_show__footer">
-        <div class="item_show__description">
-          <%= @item.description %>
-        </div>
-        <div class="item_show__add">
-          <%= button_tag 'ADD TO CART' %>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render(partial: 'item_card--show',
+            locals: {card_title: @item.title, price: @item.price, photo_url: @item.photo_url, item: @item})%>
 </div>
+
+
+<script type="text/javascript">
+ cart=[];
+ if(localStorage.getItem('cart').length > 0){
+   cart = localStorage.getItem('cart');
+   cart=JSON.parse(cart);
+ }
+
+
+
+ buttons = document.getElementsByClassName("card__add");
+
+ console.log(buttons)
+
+ for(let i=0; i< buttons.length; i++){
+
+   sign = buttons[i].lastElementChild;
+
+
+   el=buttons[i].firstElementChild.textContent.replace(/\s/g,'');
+
+   if(cart.indexOf(el)>=0){
+     console.log(el)
+     sign.remove();
+     buttons[i].lastElementChild.remove();
+
+     var added = document.createElement("div");
+     added.textContent="ADDED TO CART";
+     added.className="card__add--added"
+
+     buttons[i].appendChild(added);
+
+     buttons[i].className = "card__add reverse";
+     cart.push(item);
+   }
+ }
+</script>
